new questions, fix existing

--- a/sitecore-exam-prep/index.html
+++ b/sitecore-exam-prep/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="Description" content="Sitecore Certified Platform Associate Developer Exam Preparation Quiz">
+  <meta name="Description" content="Sitecore Developer Exam Preparation Quiz">
   <title>Sitecore Exam Prep</title>
   <link rel="shortcut icon" type="image/png" href="https://monkey-ldb.github.io/static/img/sitecore-quiz/sitecore-favicon/favicon.ico" />
   <link rel="apple-touch-icon" href="img/icons/icon-152x152.png">
